chore: Added docker compose.

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,7 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Server=127.0.0.1; Port=5432; Database=rinha; Userid=admin; Password=123;"
-  },
-  "JWTSecret": "d2f30c770f7d4abeb79455f68491d90d"
+    "Default": "Server=127.0.0.1; Port=5432; Database=projectmanagement; Userid=admin; Password=123;"
+  }
 }
