--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=db; Port=5432; Database=projectmanagement; Userid=admin; Password=123;"
+  },
+  "JWTSecret": "d2f30c770f7d4abeb79455f68491d90d"
 }
